// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props.text="text" and props.config.renderer="text" renders correctly 1`] = `
<WithStyles(Card)>
  <p>
    text
  </p>
</WithStyles(Card)>
`;

exports[`when props.text="text" renders correctly 1`] = `
<WithStyles(Card)>
  <div>
    text
  </div>
</WithStyles(Card)>
`;

exports[`when props={} renders correctly 1`] = `
<WithStyles(Card)>
  
</WithStyles(Card)>
`;

exports[`with props.choices and props.selectChoice renders correctly 1`] = `
<WithStyles(Card)>
  <WithStyles(Choice)
    choiceId="value1"
    selectChoice={[Function]}
  >
    <span>
      key1
    </span>
  </WithStyles(Choice)>
  <WithStyles(Choice)
    choiceId="value2"
    selectChoice={[Function]}
  >
    <span>
      key2
    </span>
  </WithStyles(Choice)>
</WithStyles(Card)>
`;
